<resources>
    <string name="app_name">ExerDice</string>
    <string name="welcome">Are you ready to EXERDISE?</string>

    <string name="arms">ARMS</string>
    <string name="legs">LEGS</string>
    <string name="cardio">CARDIO</string>
    <string name="core">CORE</string>

    <string name="stats">STATS</string>
    <string name="back">BACK</string>

    <string name="mood">Mood</string>
    <string name="update">Update Mood</string>
    <string name="highest_txt">Highest Record of Exercises Achieved</string>
    <string name="default_high">0</string>
    <string name="current_txt">Current Record of Exercises Achieved</string>
    <string name="default_current">0</string>
</resources>
