<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textSize="50sp"
        android:gravity="center"
        android:textStyle="bold"
        android:typeface="normal"
        android:textColor="@color/white"
        android:background="@color/turquoise"
        android:text="@string/welcome"/>

    <TableLayout
        android:id="@+id/exerciseTable"
        android:layout_below="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/arms"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/rounded_corner_blue"
                android:text="@string/arms"
                android:onClick="toArms"
                android:layout_column="0"/>

            <Button
                android:id="@+id/legs"
                android:layout_weight="1"
                android:padding="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                style="@style/ButtonStyle"
                android:background="@drawable/rounded_corner_darkpink"
                android:text="@string/legs"
                android:onClick="toLegs"
                android:layout_column="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/core"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/rounded_corner_blue"
                android:text="@string/core"
                android:onClick="toCore"
                android:layout_column="0"/>

            <Button
                android:id="@+id/cardio"
                android:layout_weight="1"
                android:padding="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                style="@style/ButtonStyle"
                android:background="@drawable/rounded_corner_darkpink"
                android:text="@string/cardio"
                android:onClick="toCardio"
                android:layout_column="1"/>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exerciseTable"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:typeface="normal"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner_darkgrey"
        android:text="@string/stats"
        android:onClick="toStats"/>

    <TextView
        android:id="@+id/today_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/stats"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:typeface="normal"
        android:textColor="@color/turquoise"
        android:text="@string/mood"/>

    <RatingBar
        android:id="@+id/mood"
        android:layout_below="@+id/today_text"
        style="@style/RatingBar"/>

    <Button
        android:id="@+id/update_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mood"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="10sp"
        android:gravity="center"
        android:textStyle="bold"
        android:typeface="normal"
        android:textColor="@color/darkGrey"
        android:background="@drawable/rounded_corner_pink"
        android:text="@string/update"
        android:onClick="updateMood"/>

</RelativeLayout>